--- a/src/pages/Resources.module.css
+++ b/src/pages/Resources.module.css
@@ -34,6 +34,13 @@
   grid-template-columns: 1fr 1fr;
   gap: 16px;
   margin-bottom: 16px;
+  margin-top: 2rem;
+}
+
+.boxGrid > :last-child:nth-child(odd) {
+  grid-column: 1 / -1;
+  max-width: calc(50% - 8px);
+  margin: 0 auto;
 }
 
 .box {
